--- a/salarycalculator/package.json
+++ b/salarycalculator/package.json
@@ -1,11 +1,16 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "rnpm" : {
+    "assets" : [
+      ".assets/fonts"
+    ]
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject" 
   },
   "dependencies": {
     "expo": "^34.0.1",
