--- a/salarycalculator/package.json
+++ b/salarycalculator/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-textinput-effects": "^0.5.1",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
